[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/jean28518.jTools/jTable/LineControl.gd" type="Script" id=1]

[node name="LineControl" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 175, 0 )
size_flags_horizontal = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Line" type="Label" parent="HBoxContainer"]
margin_top = 293.0
margin_right = 25.0
margin_bottom = 307.0
rect_min_size = Vector2( 25, 0 )
text = "1"
align = 1

[node name="Up" type="Button" parent="HBoxContainer"]
margin_left = 29.0
margin_right = 59.0
margin_bottom = 600.0
text = "Up"

[node name="Down" type="Button" parent="HBoxContainer"]
margin_left = 63.0
margin_right = 111.0
margin_bottom = 600.0
text = "Down"

[node name="Delete" type="Button" parent="HBoxContainer"]
margin_left = 115.0
margin_right = 170.0
margin_bottom = 600.0
text = "Delete"
[connection signal="pressed" from="HBoxContainer/Up" to="." method="_on_Up_pressed"]
[connection signal="pressed" from="HBoxContainer/Down" to="." method="_on_Down_pressed"]
[connection signal="pressed" from="HBoxContainer/Delete" to="." method="_on_Delete_pressed"]
